# osu_db

./: .gitignore  README.md  __init__.py  pyproject.toml  run.py  setup.py
code/: __init__.py
demos/: demo0.py
osu_db/: maps_db.py
scripts/: clean.bat
src/: __init__.py  maps_db.py  osu_db_reader.py
